added logout button when logged in

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,7 @@
 @import 'Register.css';
 @import 'Main.css';
 @import 'login.css';
-@import "header.css";
+@import "Header.css";
 
 .App {
     text-align: center;
