--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
     height: 60px;
     float: left;
 }
