--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,13 +3,14 @@
 @import 'Main.css';
 @import 'login.css';
 @import "Header.css";
+@import "Home.css";
 
 .App {
     text-align: center;
 }
 
 .App-logo {
-    /* animation: App-logo-spin infinite 20s linear; */
+    animation: App-logo-spin infinite 20s linear;
     height: 60px;
     float: left;
 }
